--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,15 @@ services:
     command: bash -c "python manage.py migrate  && python manage.py runserver 0.0.0.0:8000"
     depends_on:
       - db
-
+  redis:
+    image: redis
+    ports:
+      - "6379:6379"
+  celery:
+    build: .
+    command: celery -A reminder_service worker -l info
+    depends_on:
+      - redis
   db:
     image: postgres # указывать точную версию
     restart: always
