--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     depends_on:
       - db
       - redis
+    volumes:
+      - /media:/code/media
   redis:
     image: redis
     ports:
@@ -45,4 +47,5 @@ services:
       - data:/var/lib/postgresql/data
 volumes:
   data:
+  media:
 
