--- a/requirements.txt
+++ b/requirements.txt
@@ -1,60 +1,206 @@
 aiohttp==3.8.4
-babel==2.12.1
+aiosignal==1.3.1
+amqp==5.1.1
+anyio==3.6.2
+aplus==0.11.0
+asgiref==3.6.0
+asteval==0.9.29
+astropy==5.2.1
+asttokens==2.2.1
+async-timeout==4.0.2
+attrs==22.2.0
+Babel==2.12.1
+backcall==0.2.0
+backports.zoneinfo==0.2.1
 beautifulsoup4==4.12.0
+billiard==3.6.4.0
+blake3==0.3.3
+blosc2==2.0.0
 branca==0.6.0
+cachetools==5.3.0
 celery==5.2.7
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.0.1
+click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
+cloudpickle==2.2.1
+colorama==0.4.6
+comm==0.1.2
 configparser==5.3.0
+contourpy==1.0.7
+cryptography==39.0.2
+cycler==0.11.0
+Cython==0.29.33
+dask==2023.3.1
+debugpy==1.6.6
+decorator==5.1.1
+Django==4.1.7
 django-ckeditor==6.5.1
-django-debug-toolbar==3.8.1
+django-js-asset==2.0.0
 django-loguru==1.0.3
 django-multiupload==0.6.1
 django-scheduler==0.10.1
+django_debug_toolbar==3.8.1
 docopt==0.6.2
-flask-markdown==0.3
-frozen-flask==0.18
+exceptiongroup==1.1.1
+executing==1.2.0
+fastapi==0.94.1
+filelock==3.9.1
+flake8==6.0.0
+Flask==2.2.3
+Flask-Markdown==0.3
+fonttools==4.39.0
+Frozen-Flask==0.18
+frozendict==2.3.5
+frozenlist==1.3.3
+fsspec==2023.3.0
+future==0.18.3
 gevent==22.10.2
+greenlet==2.0.2
+h11==0.14.0
+h5py==3.8.0
 habanero==1.2.3
 hitran-api==1.2.2.0
 hjson==3.1.0
 html5lib==1.1
 httptools==0.5.0
 humanize==4.6.0
+icalendar==5.0.4
 icecream==2.1.3
+idna==3.4
+importlib-metadata==6.0.0
+importlib-resources==5.12.0
+iniconfig==2.0.0
+ipykernel==6.21.3
 ipympl==0.9.3
+ipython==8.11.0
+ipython-genutils==0.2.0
 ipyvue==1.9.0
 ipywebrtc==0.6.0
+ipywidgets==8.0.4
+itsdangerous==2.1.2
+jaraco.classes==3.2.3
+jedi==0.18.2
+jeepney==0.8.0
+Jinja2==3.1.2
 joblib==1.2.0
 json-tricks==3.16.1
+jupyter_client==8.0.3
+jupyter_core==5.2.0
+jupyterlab-widgets==3.0.5
 keyring==23.13.1
+kiwisolver==1.4.4
+kombu==5.2.4
+llvmlite==0.39.1
 lmfit==1.1.0
+locket==1.0.0
+loguru==0.6.0
 lxml==4.9.2
+Markdown==3.4.1
+markdown-it-py==2.2.0
+MarkupSafe==2.1.2
+matplotlib==3.7.1
+matplotlib-inline==0.1.6
+mccabe==0.7.0
+mdurl==0.1.2
+more-itertools==9.1.0
 mpldatacursor==0.7.1
-peakutils==1.3.4
+msgpack==1.0.5
+multidict==6.0.4
+nest-asyncio==1.5.6
+numba==0.56.4
+numexpr==2.8.4
+numpy==1.22.3
+packaging==23.0
+pandas==1.5.3
+parso==0.8.3
+partd==1.3.0
+PeakUtils==1.3.4
+pexpect==4.8.0
+pickleshare==0.7.5
 pika==1.3.1
+Pillow==9.4.0
 pip-chill==1.0.1
+platformdirs==3.1.1
 plotly==5.13.1
+pluggy==1.0.0
+progressbar2==4.2.0
+prompt-toolkit==3.0.38
+psutil==5.9.4
 psycopg-binary==3.1.8
 psycopg2-binary==2.9.5
+ptyprocess==0.7.0
 publib==0.3.3
-pyrogram==2.0.102
+pure-eval==0.2.2
+py-cpuinfo==9.0.0
+pyaes==1.6.1
+pyarrow==11.0.0
+pycodestyle==2.10.0
+pycparser==2.21
+pydantic==1.10.6
+pyerfa==2.0.0.1
+pyflakes==3.0.1
+Pygments==2.14.0
+pyparsing==3.0.9
+Pyrogram==2.0.102
+PySocks==1.7.1
 pytest==7.2.2
+python-dateutil==2.8.2
 python-dotenv==0.21.1
+python-utils==3.5.2
+pytz==2022.7.1
 pyvo==1.4.1
+PyYAML==6.0
+pyzmq==25.0.1
 redis==4.5.1
+requests==2.28.2
+rich==13.3.2
 schedule==1.1.0
+scipy==1.10.1
 seaborn==0.12.2
+SecretStorage==3.3.3
 signals==0.0.2
+six==1.16.0
+sniffio==1.3.0
+soupsieve==2.4
+sqlparse==0.4.3
+stack-data==0.6.2
+starlette==0.26.1
 tables==3.8.0
+tabulate==0.9.0
+tenacity==8.2.2
 termcolor==2.2.0
-tgcrypto==1.2.5
+TgCrypto==1.2.5
+tomli==2.0.1
+toolz==0.12.0
+tornado==6.2
+tqdm==4.65.0
+traitlets==5.9.0
 traittypes==0.2.1
+typing_extensions==4.5.0
+uncertainties==3.1.7
+urllib3==1.26.14
+uvicorn==0.21.0
 uvloop==0.17.0
 vaex-astro==0.9.3
+vaex-core==4.16.1
 vaex-hdf5==0.14.1
 vaex-ml==0.18.1
 vaex-server==0.8.1
 vaex-viz==0.5.4
+vine==5.0.0
 watchfiles==0.18.1
+wcwidth==0.2.6
+webencodings==0.5.1
 websockets==10.4
+Werkzeug==2.2.3
+widgetsnbextension==4.0.5
 xarray==2023.1.0
 xyzservices==2023.2.0
+yarl==1.8.2
+zipp==3.15.0
+zope.event==4.6
+zope.interface==6.0
