--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,16 +25,19 @@ services:
       - "80:80"
     depends_on:
       - reminder_service
+    env_file:
+      - .env
   redis:
     image: redis:alpine
     ports:
       - "6379:6379"
+    env_file:
+      - .env
   celery:
     build: .
     restart: always
     volumes:
       - /media:/home/app/media
-    command: sh -c "python -m celery -A reminder_service worker "
     env_file:
       - .env
     depends_on:
@@ -47,13 +50,14 @@ services:
     build: .
     volumes:
       - /media:/home/app/media
-    command: sh -c "python -m celery -A reminder_service beat"
     depends_on:
       - db
       - redis
       - reminder_service
     links:
       - redis
+    env_file:
+      - .env
   db:
     image: postgres:latest # указывать точную версию
     restart: always
